# Star-Node

./: CHANGELOG.md  CONFIG.md  Cargo.toml  README.md
docs/: DATAPLANE_USERS.md
src/: dataplane.rs  lib.rs  logging.rs  main.rs  session.rs  telemetry.rs
src/account/: mod.rs  rate_limit.rs
src/client/: mod.rs
src/config/: mod.rs  validate.rs
src/config/types/: groups.rs  mod.rs
src/dns/: proxy_runtime.rs
src/io/: mod.rs
src/mux/: mod.rs
src/net/: mod.rs  socket_util.rs
src/proxy/: http.rs  mod.rs  port_forward.rs  trojan.rs
src/proxy/shadowsocks/: shadowsocks_stream.rs  shadowsocks_tcp_handler.rs
src/proxy/snell/: snell_handler.rs
src/proxy/socks/: handler.rs  mod.rs
src/proxy/vless/: mod.rs  vless_server_handler.rs
src/proxy/vmess/: vmess_handler.rs
src/runtime/: mod.rs  stream_worker_pool.rs  thread_util.rs
src/security/: mod.rs
src/security/reality/: mod.rs
src/security/tls/: mod.rs
src/support/: mod.rs  uuid_util.rs
src/transport/: mod.rs
src/transport/quic/: mod.rs  server.rs
src/transport/tcp/: tcp_handler.rs  tcp_server.rs  tcp_server_handler_factory.rs
src/tun/: mod.rs
