[package]
name = "shoes"
version = "0.2.8"
edition = "2024"
license = "MIT"
description = "A multi-protocol proxy dataplane library."
readme = "README.md"
categories = ["network-programming"]

[lib]
name = "shoes"
crate-type = ["rlib"]

[workspace]

[features]
default = []

[dependencies]
async-trait = "*"
aws-lc-rs = { version = "*", default-features = false }
base64 = "*"
blake3 = "*"
bytes = "*"
chrono = "*"
dashmap = "*"
digest = "*"
etherparse = "*"
futures = "*"
h2 = "*"
h3 = "*"
h3-quinn = "*"
# Git version required for H3 disable_grease option (needed for Cloudflare).
# Also pinned past older resolver active-request cleanup behavior.
# See: https://github.com/hickory-dns/hickory-dns/pull/2085
hickory-resolver = { git = "https://github.com/hickory-dns/hickory-dns", rev = "e6ac966867ad6adcc77919f2f82fe4e5e793bb9d", default-features = false, features = ["tokio", "tls-aws-lc-rs", "https-aws-lc-rs", "h3-aws-lc-rs"] }
http = "*"
http-body-util = "*"
hyper = { version = "*", features = ["server", "http1", "http2"] }
hyper-util = { version = "*", features = ["tokio", "server"] }
indexmap = "*"
libc = "*"
log = { version = "*", features = ["std", "release_max_level_info"] }
lru = "*"
md-5 = "*"
memchr = "*"
mime_guess = "*"
parking_lot = "*"
percent-encoding = "*"
quinn = { version = "*", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-aws-lc-rs"] }
rand = "*"
rand_core = "*"
rcgen = { version = "*", default-features = false, features = ["aws_lc_rs", "pem"] }
rust-argon2 = "*"
rustc-hash = "*"
rustls = "*"
serde = { version = "*", features = ["derive", "std"] }
serde_yaml = "*"
sha3 = "*"
socket2 = "*"
subtle = "*"
tokio = { version = "*", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { version = "*", features = ["time"] }
url = "*"
webpki-roots = { version = "*" }
x509-parser = { version = "*", default-features = false, features = ["verify-aws"] }

[dev-dependencies]
rcgen = { version = "*", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls-pemfile = "*"
serde_json = "*"
tempfile = "*"
tokio-rustls = "*"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
